--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,11 +1,14 @@
 Package: jagstools
 Type: Package
-Title: Shortcuts for summarising rjags results and recovering parameter structure.
-Version: 1.3
-Date: 2012-11-25
-Author: John Baumgartner
-Maintainer: John Baumgartner <johnbb@student.unimelb.edu.au>
-Depends: R2jags, rjags
-Description: rhats: prints mean, sd and rhat for each parameter, sorted by rhat (by default, but sorting can be disabled); jagsresults: prints parameter estimates etc. for specified parameters using regex pattern matching; rearray: recovers array structure for results summaries of multidimensional parameters.
+Title: Shortcuts for summarising rjags, mcmc.list and stanfit results, and recovering parameter structure.
+Version: 1.4
+Date: 2015-03-11
+Author: John Baumgartner & James Camac
+Maintainer: John Baumgartner <johnbaums@gmail.com>
+Suggests: 
+  R2jags,
+  rjags, 
+  rstan
+Description: Summarise/filter mcmc results (rjags, mcmc.list, stanfit).
 License: Unlimited
 LazyLoad: yes
